fix(front): Fix wrapping on tags in `PhotoDetailed`

--- a/src/Pages/PhotoDetailed.module.css
+++ b/src/Pages/PhotoDetailed.module.css
@@ -105,6 +105,8 @@
 }
 
 .tagLink {
+  display: inline-flex;
+  margin-top: 0.6rem;
   font-size: 0.8em;
   text-decoration: none;
 
